--- a/1. Band Website/about.html
+++ b/1. Band Website/about.html
@@ -1,17 +1,61 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Linkin Park</title>
     </head>
     <body>
         <header>
             <nav>
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="store.html">STORE</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
+                    <li>
+                        <a href="index.html">
+                            HOME
+                        </a>
+                    </li>
+                    <li>
+                        <a href="store.html">
+                            STORE
+                        </a>
+                    </li>
+                    <li>
+                        <a href="about.html">
+                            ABOUT
+                        </a>
+                    </li>
                 </ul>
             </nav>
+            <hr>
+            <h1>
+                Linkin Park
+            </h1>
         </header>
+        <section>
+            <h2>
+                About
+            </h2>
+            <p>
+
+            </p>
+            <img src="" alt="">
+            <p>
+
+            </p>
+        </section>
+        <footer>
+            <h3>
+                Linkin Park
+            </h3>
+            <ul>
+                <li>
+                    <img src="" alt="">
+                </li>
+                <li>
+                    <img src="" alt="">
+                </li>
+                <li>
+                    <img src="" alt="">
+                </li>
+            </ul>
+        </footer>
     </body>
 </html>
