Changes to site contents

--- a/1. Band Website/about.html
+++ b/1. Band Website/about.html
@@ -1,27 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
         <title>Linkin Park</title>
     </head>
     <body>
         <header>
             <nav>
                 <ul>
-                    <li>
-                        <a href="index.html">
-                            HOME
-                        </a>
-                    </li>
-                    <li>
-                        <a href="store.html">
-                            STORE
-                        </a>
-                    </li>
-                    <li>
-                        <a href="about.html">
-                            ABOUT
-                        </a>
-                    </li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="store.html">STORE</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                 </ul>
             </nav>
             <hr>
@@ -34,11 +23,15 @@
                 About
             </h2>
             <p>
-
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus, debitis modi! 
+                Accusamus asperiores modi quos eveniet magnam accusantium doloribus consectetur, libero earum 
+                deserunt molestias voluptates. Ratione eum aliquam libero repellendus!
             </p>
-            <img src="" alt="">
+            <img src="" alt="Band Logo">
             <p>
-
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nihil odit cum quod ipsa, 
+                eligendi beatae sequi porro quos maiores explicabo magnam numquam molestias! Iusto accusantium 
+                ab ullam! Consequatur, non?
             </p>
         </section>
         <footer>
@@ -46,15 +39,9 @@
                 Linkin Park
             </h3>
             <ul>
-                <li>
-                    <img src="" alt="">
-                </li>
-                <li>
-                    <img src="" alt="">
-                </li>
-                <li>
-                    <img src="" alt="">
-                </li>
+                <li><img src="" alt="YouTube Logo"></li>
+                <li><img src="" alt="Spotify Logo"></li>
+                <li><img src="" alt="Facebook Logo"></li>
             </ul>
         </footer>
     </body>
