--- a/1. Band Website/about.html
+++ b/1. Band Website/about.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Linkin Park</title>
+        <meta name="description" content="This is the description">
     </head>
     <body>
         <header>
@@ -39,9 +40,15 @@
                 Linkin Park
             </h3>
             <ul>
-                <li><img src="" alt="YouTube Logo"></li>
-                <li><img src="" alt="Spotify Logo"></li>
-                <li><img src="" alt="Facebook Logo"></li>
+                <a href="" target="_blank">
+                    <li><img src="" alt="YouTube Logo"></li>
+                </a>
+                <a href="" target="_blank">
+                    <li><img src="" alt="Spotify Logo"></li>
+                </a>
+                <a href="" target="_blank">
+                    <li><img src="" alt="Facebook Logo"></li>
+                </a>
             </ul>
         </footer>
     </body>
