--- a/1. Band Website/index.html
+++ b/1. Band Website/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Linkin Park</title>
+        <meta name="description" content="This is the description">
     </head>
     <body>
         <header>
@@ -37,24 +38,28 @@
                     <span>Detroit MI</span>
                     <span>DTE Energy Music Theatre</span>
                     <button>Buy Now</button>
+                    <hr>
                 </div>
                 <div>
                     <strong>JUL 27</strong>
                     <span>Jamaica</span>
                     <span>Mico University College</span>
                     <button>Buy Now</button>
+                    <hr>
                 </div>
                 <div>
                     <strong>AUG 13</strong>
                     <span>California</span>
                     <span>The GOLDEN Building</span>
                     <button>Buy Now</button>
+                    <hr>
                 </div>
                 <div>
                     <strong>SEP 20</strong>
                     <span>Paris, France</span>
                     <span>Eiffel Tower</span>
                     <button>Buy Now</button>
+                    <hr>
                 </div>
             </div>
         </section>
@@ -63,9 +68,15 @@
                 Linkin Park
             </h3>
             <ul>
-                <li><img src="" alt="YouTube Logo"></li>
-                <li><img src="" alt="Spotify Logo"></li>
-                <li><img src="" alt="Facebook Logo"></li>
+                <a href="" target="_blank">
+                    <li><img src="" alt="YouTube Logo"></li>
+                </a>
+                <a href="" target="_blank">
+                    <li><img src="" alt="Spotify Logo"></li>
+                </a>
+                <a href="" target="_blank">
+                    <li><img src="" alt="Facebook Logo"></li>
+                </a>
             </ul>
         </footer>
     </body>
