--- a/1. Band Website/about.html
+++ b/1. Band Website/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Linkin Park</title>
+        <title>Linkin Park | ABOUT</title>
         <meta name="description" content="This is the description">
     </head>
     <body>
