Added image files and updated html to show images, also updated README.md

--- a/1. Band Website/about.html
+++ b/1. Band Website/about.html
@@ -28,7 +28,7 @@
                 Accusamus asperiores modi quos eveniet magnam accusantium doloribus consectetur, libero earum 
                 deserunt molestias voluptates. Ratione eum aliquam libero repellendus!
             </p>
-            <img src="" alt="Band Logo">
+            <img src="Images/Linkin-Park-Image.png" alt="Band Logo" width="400">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nihil odit cum quod ipsa, 
                 eligendi beatae sequi porro quos maiores explicabo magnam numquam molestias! Iusto accusantium 
@@ -40,14 +40,14 @@
                 Linkin Park
             </h3>
             <ul>
-                <a href="" target="_blank">
-                    <li><img src="" alt="YouTube Logo"></li>
+                <a href="https://www.youtube.com/@LinkinPark/featured" target="_blank">
+                    <li><img src="Images/YT-Logo.png" alt="YouTube Logo" width="25"></li>
                 </a>
-                <a href="" target="_blank">
-                    <li><img src="" alt="Spotify Logo"></li>
+                <a href="https://open.spotify.com/artist/6XyY86QOPPrYVGvF9ch6wz" target="_blank">
+                    <li><img src="Images/Spotify-Logo.png" alt="Spotify Logo" width="25"></li>
                 </a>
-                <a href="" target="_blank">
-                    <li><img src="" alt="Facebook Logo"></li>
+                <a href="https://www.facebook.com/linkinpark/" target="_blank">
+                    <li><img src="Images/FB-Logo.png" alt="Facebook Logo" width="25"></li>
                 </a>
             </ul>
         </footer>
