--- a/1. Band Website/index.html
+++ b/1. Band Website/index.html
@@ -18,13 +18,13 @@
             <h1>
                 Linkin Park
             </h1>
-            <button>
+            <button role="button">
                 Get our Latest Album
             </button>
             <br>
             <br>
             <!-- Find a suitable background image -->
-            <button>
+            <button role="button">
                 &#9658;
             </button>
         </header>
@@ -68,14 +68,14 @@
                 Linkin Park
             </h3>
             <ul>
-                <a href="" target="_blank">
-                    <li><img src="" alt="YouTube Logo"></li>
+                <a href="https://www.youtube.com/@LinkinPark/featured" target="_blank">
+                    <li><img src="Images/YT-Logo.png" alt="YouTube Logo" width="25"></li>
                 </a>
-                <a href="" target="_blank">
-                    <li><img src="" alt="Spotify Logo"></li>
+                <a href="https://open.spotify.com/artist/6XyY86QOPPrYVGvF9ch6wz" target="_blank">
+                    <li><img src="Images/Spotify-Logo.png" alt="Spotify Logo" width="25"></li>
                 </a>
-                <a href="" target="_blank">
-                    <li><img src="" alt="Facebook Logo"></li>
+                <a href="https://www.facebook.com/linkinpark/" target="_blank">
+                    <li><img src="Images/FB-Logo.png" alt="Facebook Logo" width="25"></li>
                 </a>
             </ul>
         </footer>
