--- a/1. Band Website/store.html
+++ b/1. Band Website/store.html
@@ -124,14 +124,14 @@
                 Linkin Park
             </h3>
             <ul>
-                <a href="" target="_blank">
-                    <li><img src="" alt="YouTube Logo"></li>
+                <a href="https://www.youtube.com/@LinkinPark/featured" target="_blank">
+                    <li><img src="Images/YT-Logo.png" alt="YouTube Logo" width="25"></li>
                 </a>
-                <a href="" target="">
-                    <li><img src="" alt="Spotify Logo"></li>
+                <a href="https://open.spotify.com/artist/6XyY86QOPPrYVGvF9ch6wz" target="_blank">
+                    <li><img src="Images/Spotify-Logo.png" alt="Spotify Logo" width="25"></li>
                 </a>
-                <a href="" target="">
-                    <li><img src="" alt="Facebook Logo"></li>
+                <a href="https://www.facebook.com/linkinpark/" target="_blank">
+                    <li><img src="Images/FB-Logo.png" alt="Facebook Logo" width="25"></li>
                 </a>
             </ul>
         </footer>
