Added images to pages

--- a/1. Band Website/store.html
+++ b/1. Band Website/store.html
@@ -25,7 +25,7 @@
                 <div>
                    <strong>Album 1</strong> 
                 </div>
-                <img src="" alt="Album Cover">
+                <img src="Images/Album1.png" alt="Album Cover" width="300">
                 <div>
                     <span>$10.59</span>
                     <button role="button">Add To Cart</button>
@@ -35,7 +35,7 @@
                 <div>
                    <strong>Album 2</strong> 
                 </div>
-                <img src="" alt="Album Cover">
+                <img src="Images/Album2.png" alt="Album Cover" width="300">
                 <div>
                     <span>$13.99</span>
                     <button role="button">Add To Cart</button>
@@ -45,7 +45,7 @@
                 <div>
                    <strong>Album 3</strong> 
                 </div>
-                <img src="" alt="Album Cover">
+                <img src="Images/Album3.png" alt="Album Cover" width="300">
                 <div>
                     <span>$9.48</span>
                     <button role="button">Add To Cart</button>
