--- a/1. Band Website/store.html
+++ b/1. Band Website/store.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Linkin Park | STORE</title>
+        <title>Linkin Park | Store</title>
         <meta name="description" content="This is the description">
     </head>
     <body>
