--- a/1. Band Website/store.html
+++ b/1. Band Website/store.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="icon" href="Images/LP-Logo.png" type="image/x-icon">
         <title>Linkin Park | Store</title>
         <meta name="description" content="This is the description">
     </head>
