Added images and created result.html page

--- a/1. Band Website/store.html
+++ b/1. Band Website/store.html
@@ -56,7 +56,7 @@
                 <div>
                    <strong>Album 4</strong> 
                 </div>
-                <img src="" alt="Album Cover">
+                <img src="Images/Album4.png" alt="Album Cover" width="300">
                 <div>
                     <span>$10.99</span>
                     <button role="button">Add To Cart</button>
@@ -69,7 +69,7 @@
                 <div>
                    <strong>T-Shirt</strong> 
                 </div>
-                <img src="" alt="Shirt Cover">
+                <img src="Images/Shirt-Cover.png" alt="Shirt Cover" width="300" height="300">
                 <div>
                     <span>$20.59</span>
                     <button role="button">Add To Cart</button>
@@ -79,7 +79,7 @@
                 <div>
                    <strong>Hoodie</strong> 
                 </div>
-                <img src="" alt="Hoodie Cover">
+                <img src="Images/Hoodie-Cover.png" alt="Hoodie Cover" width="300" height="300">
                 <div>
                     <span>$30.99</span>
                     <button role="button">Add To Cart</button>
