--- a/2. Learn Forms/index.html
+++ b/2. Learn Forms/index.html
@@ -7,7 +7,7 @@
     <title>Form</title>
 </head>
 <body>
-    <form action="results.html" method="post">
+    <form action="result.html" method="get">
         <div>
             <label for="">Name</label>
             <input type="text">
