Edited form page and README.md content

--- a/2. Learn Forms/index.html
+++ b/2. Learn Forms/index.html
@@ -7,16 +7,17 @@
     <title>Form</title>
 </head>
 <body>
-    <form action="result.html" method="get">
+    <form action="results.html" method="get">
         <div>
-            <label for="">Name</label>
-            <input type="text">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name">
         </div>
         <div>
-            <label for="">Password</label>
-            <input type="text">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password">
         </div>
-        <input type="submit" value="Submit">
+        <button type="reset">Reset</button>
+        <button type="submit">Submit</button>
     </form>
 </body>
 </html>
