--- a/2. Learn Forms/index.html
+++ b/2. Learn Forms/index.html
@@ -7,7 +7,7 @@
     <title>Form</title>
 </head>
 <body>
-    <form action="results.html" method="get">
+    <form action="results.html" method="get" enctype="multipart/form-data">
         <div>
             <label for="name">Name</label>
             <input type="text" name="name" id="name" required>
@@ -22,11 +22,7 @@
         </div>
         <div>
             <label for="date">Birthdate</label>
-            <input type="date" name="date" id="date" required>
-        </div>
-        <div>
-            <label for="phone">Phone</label>
-            <input type="tel" name="phone" id="phone" required>
+            <input type="date" name="date" id="date" min="2019-6-10" required>
         </div>
         <div>
             Favourite Fruit
@@ -50,6 +46,38 @@
                 <input type="radio" name="gender" id="female" value="female">
             </div>
         </div>
+        <div>
+            <label for="eyeColour">Eye Colour</label>
+            <select name="eyeColour" id="eyeColour">
+                <option value="blue">Blue</option>
+                <option value="brown">Brown</option>
+                <option value="green">Green</option>
+                <option value="hazel">Hazel</option>
+            </select>
+        </div>
+        <div>
+            <label for="bio">Bio</label>
+            <textarea name="bio" id="bio"></textarea>
+        </div>
+        <input type="hidden" value="This elment is hidden from the page." name="hidden" id="hidden">
+        <div>
+            <label for="file">File</label>
+            <input type="file" name="file" id="file">
+        </div>
+        <!-- Lesser used form types -->
+        <div>
+            <label for="phone">Phone</label>
+            <input type="tel" name="phone" id="phone" required>
+        </div>
+        <div>
+            <label for="url">URL</label>
+            <input type="url" name="url" id="url">
+        </div>
+        <div>
+            <label for="colour">Colour</label>
+            <input type="color" name="colour" id="colour">
+        </div>
+        <!--/-->
         <div>
             <label for="password">Password</label>
             <input type="password" name="password" id="password" required>
