--- a/1. Band Website/store.html
+++ b/1. Band Website/store.html
@@ -125,15 +125,15 @@
                 Linkin Park
             </h3>
             <ul>
-                <a href="https://www.youtube.com/@LinkinPark/featured" target="_blank">
-                    <li><img src="Images/YT-Logo.png" alt="YouTube Logo" width="25"></li>
-                </a>
-                <a href="https://open.spotify.com/artist/6XyY86QOPPrYVGvF9ch6wz" target="_blank">
-                    <li><img src="Images/Spotify-Logo.png" alt="Spotify Logo" width="25"></li>
-                </a>
-                <a href="https://www.facebook.com/linkinpark/" target="_blank">
-                    <li><img src="Images/FB-Logo.png" alt="Facebook Logo" width="25"></li>
-                </a>
+                <li>
+                    <a href="https://www.youtube.com/@LinkinPark/featured" target="_blank"><img src="Images/YT-Logo.png" alt="YouTube Logo" width="25"></a>
+                </li>
+                <li>
+                    <a href="https://open.spotify.com/artist/6XyY86QOPPrYVGvF9ch6wz" target="_blank"><img src="Images/Spotify-Logo.png" alt="Spotify Logo" width="25"></a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/linkinpark/" target="_blank"><img src="Images/FB-Logo.png" alt="Facebook Logo" width="25"></a>
+                </li>
             </ul>
         </footer>
     </body>
