--- a/Code Academy Projects/Summer Timetable/learn-tables.html
+++ b/Code Academy Projects/Summer Timetable/learn-tables.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Summer Timetable</title>
-  <link rel="stylesheet" href="learn-tables.css">
+  <link rel="stylesheet" href="Styles/learn-tables.css">
 </head>
 <body>
   <h1>Summer Timetable | 2024</h1>
@@ -25,8 +25,8 @@
     <tbody>
       <tr>
         <th scope="row">5:00 AM</th>
-        <td colspan="7">Morning Routine (Wake up and Pray, Spread Bed, 
-          Bathe/Shower and Brush Teeth, Journal Entry (Morning))</td>
+        <td colspan="7"><a href="routines.html">Morning Routine (Wake up and Pray, Spread Bed, 
+          Bathe/Shower and Brush Teeth, Journal Entry (Morning))</a></td>
       </tr>
       <tr>
         <th scope="row">6:00 AM</th>
@@ -37,7 +37,7 @@
       <tr>
         <th scope="row">7:00 AM</th>
         <td>Morning Routine</td>
-        <td colspan="5">Exercise</td>
+        <td colspan="5"><a href="routines.html">Exercise</a></td>
         <td>Practice Spanish/Read a Webtoon</td>
       </tr>
       <tr>
@@ -119,7 +119,7 @@
       </tr>
       <tr>
         <th scope="row">9:00 PM</th>
-        <td colspan="7">Relaxation and Leisure Time/Journal Entry (Night)</td>
+        <td colspan="7"><a href="routines.html">Relaxation and Leisure Time/Journal Entry (Night)</a></td>
       </tr>
       <tr>
         <th scope="row">10:00 PM</th>
