Edited pages on timetable

--- a/Code Academy Projects/Summer Timetable/learn-tables.html
+++ b/Code Academy Projects/Summer Timetable/learn-tables.html
@@ -25,7 +25,7 @@
     <tbody>
       <tr>
         <th scope="row">5:00 AM</th>
-        <td colspan="7"><a href="routines.html">Morning Routine (Wake up and Pray, Spread Bed, 
+        <td colspan="7"><a href="routines.html#morning">Morning Routine (Wake up and Pray, Spread Bed, 
           Bathe/Shower and Brush Teeth, Journal Entry (Morning))</a></td>
       </tr>
       <tr>
@@ -37,7 +37,7 @@
       <tr>
         <th scope="row">7:00 AM</th>
         <td>Morning Routine</td>
-        <td colspan="5"><a href="routines.html">Exercise</a></td>
+        <td colspan="5"><a href="routines.html#workout">Exercise</a></td>
         <td>Practice Spanish/Read a Webtoon</td>
       </tr>
       <tr>
@@ -119,7 +119,7 @@
       </tr>
       <tr>
         <th scope="row">9:00 PM</th>
-        <td colspan="7"><a href="routines.html">Relaxation and Leisure Time/Journal Entry (Night)</a></td>
+        <td colspan="7"><a href="routines.html#night">Relaxation and Leisure Time/Journal Entry (Night)</a></td>
       </tr>
       <tr>
         <th scope="row">10:00 PM</th>
