--- a/Code Academy Projects/Summer Timetable/routines.html
+++ b/Code Academy Projects/Summer Timetable/routines.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Morning Routine</title>
+  <link rel="stylesheet" href="Styles/routines.css">
 </head>
 <body>
   <header>
     <h1>List of Routines</h1>
   </header>
   <main>
-    <div class="morning">
+    <div class="morning" id="morning">
       <h2>Morning Routine</h2>
       <ol>
         <li>
@@ -31,7 +32,13 @@
         </li>
       </ol>
     </div>
-    <div class="workout">
+    <div class="tips">
+      <h2>Productivity Tips</h2>
+      <ul>
+        <li>Using music makes chores less tedious.</li>
+      </ul>
+    </div>
+    <div class="workout" id="workout">
       <h2>Workout Routine</h2>
       <input type="checkbox" name="item9" id="item9">
       <label for="item9">Warm-up (Jumping Jacks)</label>
@@ -122,7 +129,7 @@
         </li>
       </ul>
     </div>
-    <div class="night">
+    <div class="night" id="night">
       <h2>Night Routine</h2>
       <ol>
         <li>
