--- a/2. Learn Forms/index.html
+++ b/2. Learn Forms/index.html
@@ -7,7 +7,7 @@
     <title>Form</title>
 </head>
 <body>
-    <form action="results.html" method="get" enctype="multipart/form-data">
+    <form action="results.html" method="GET" enctype="multipart/form-data">
         <div>
             <label for="name">Name</label>
             <input type="text" name="name" id="name" required>
